@@ -2,7 +2,7 @@ sg3-utils (1.27-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Doug Gilbert <dgilbert@interlog.com>  Sat, 28 Feb 2009 11:10:00 +0100
+ -- Doug Gilbert <dgilbert@interlog.com>  Sun, 08 Mar 2009 19:00:00 -0400
 
 sg3-utils (1.26-0.1) unstable; urgency=low
 
